packages/rune/fixtures/corpus/invalid/step-outside-req.rune
[RET] FooDto

[DTO] FooDto: a
    a value returned from nowhere — [RET] is only valid inside a [REQ]
